[aliases]
release = bdist_wheel
test = pytest

[metadata]
name = yang2tosca
version = attr: yang2tosca.__version__
summary = Convert YANG files to TOSCA type definitions
description_file = README.md
description_content_type = text/markdown
author = Chris Lauwers
author_email = lauwers@ubicity.com
home_page = https://github.com/lauwers/yang2tosca
license = Apache License Version 2.0
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    pyang
    pyyaml
    stringcase
include_package_data = True
scripts =
    scripts/yang2tosca
    scripts/get_tosca_plugin_dir
    
[options.package_data]
yang2tosca =
    config.yaml

